# index-diachronica-redux

./: .gitignore  CHANGELOG.md  LICENSE  README.md  austronesian-sample.html  cabal.project  index-diachronica-redux.cabal  style.css
app/: Main.hs
app/ID/: Analyse.hs  Generate.hs  Parse.hs  Schemata.hs
data/: langinfo.yaml  languoids.csv  references-data.yaml  references.bib
data/changes/: austronesian.txt  bantu.txt  papuan.txt
site/: style.css
